# ruflo

./: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json  requirements.txt
.claude/: settings.json
.claude/docs/: agent-teams.md  agentic-qe.md  agents-reference.md  cli-reference.md  hooks-workers.md  intelligence-system.md  memory-bridge.md  plugins.md  (+3 more)
aperture/crates/aperture-tui/: Cargo.toml
aperture/crates/aperture-tui/src/: app.rs  main.rs
aperture/crates/aperture-tui/src/agent_runner/: data.rs  mod.rs  panes.rs
aperture/crates/aperture-tui/tests/: roundtrip_stdio.rs  roundtrip_stdio_v3.rs
aperture/crates/aperture-wasm/: Cargo.toml
aperture/crates/aperture-wasm/src/: fetch_bridge.rs  keymap_web.rs  lib.rs  shell.rs  shell_routing.rs
aperture/crates/aperture-wasm/src/shell_renderers/: mod.rs  wave1.rs  wave3.rs
aperture/crates/aperture-wasm/tests/: inbound_rendering.rs
bench-witness/: ledger.json  rag-cached-router-2026-05-18T01-28-51-966Z.json  rag-real-text-2026-05-18T00-27-56-447Z.json  rag-router-ablation-2026-05-18T01-11-02-014Z.json
benchmarks/: bench-mode-b.mjs
config/: settings.py
listings/: bundle-deals.json  design-specs.json  listing-001.json  listing-002.json  listing-003.json  listing-004.json  listing-005.json  listing-006.json  listing-007.json  listing-008.json  listing-009.json  listing-010.json  market-research-report.json  pricing-strategy.json
products/: 001-chatgpt-prompts-entrepreneurs.md  002-ai-beginners-guide.md  003-build-first-ai-agent.md  004-ai-daily-life-toolkit.md  005-ultimate-ai-cheat-sheet.md  006-ai-for-insurance-agents.md  007-300-prompts-social-media-managers.md  008-no-code-ai-automation-guide.md  009-ai-morning-routine-system.md  010-notion-ai-productivity-bundle.md
ruflo/: package.json
scripts/: benchmark-rag-cached-router.mjs  benchmark-rag-real-text.mjs  benchmark-rag-router-ablation.mjs  benchmark-rag-scale.mjs  run-etsy-business.ts
src/: main.py
v3/: CLAUDE.md
verification/: witness-fixes.json
(+343 files in other folders)
